--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,23 @@
-name: Python application test with Github Actions using devcontainers
-on: [push]
+name: Sync to Hugging Face hub
+on:
+  push:
+    branches: [main]
+
+  # to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
 jobs:
-  build:
+  sync-to-hub:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: test build-Build and run dev container task
-      uses: devcontainers/ci@v0.2
-      with:
-        runCmd: |
-          make install
-          make lint
-          make test
-          make format
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Add remote 
+        env:
+          HF: ${{ secrets.HF_TOKEN }}
+        run: git remote add space https://huggingface.co/spaces/yadgire/demo-deployment
+      - name: Push to hub
+        env:
+          HF: ${{ secrets.HF_TOKEN }}
+        run: git push --force git clone https://huggingface.co/spaces/yadgire/demo-deployment main
