--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,7 @@
+- name: Dev Container Build and Run Action              
+  uses: devcontainers/ci@v0.3.1900000349
+
+
 name: Sync to Hugging Face hub
 on:
   push:
