--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,9 @@
 name: Sync to Hugging Face hub
-uses: devcontainers/ci@v0.3.1900000349
-on:
-  push:
-    branches: [main]
+on: push
+branches: [main]
 
-  # to run this workflow manually from the Actions tab
-  workflow_dispatch:
+# to run this workflow manually from the Actions tab
+workflow_dispatch:
 
 jobs:
   sync-to-hub:
