--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
 name: Sync to Hugging Face hub
-on: push
-branches: [main]
-
-# to run this workflow manually from the Actions tab
-workflow_dispatch:
-
+on: 
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
+    
 jobs:
   sync-to-hub:
     runs-on: ubuntu-latest
