--- a/.github/workflows/hf_push.yml
+++ b/.github/workflows/hf_push.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_SECRET }}
-        run: git push https://yadgire:$HF_SECRET@huggingface.co/spaces/yadgire/demo-deployment main
+        run: git push --force https://yadgire:$HF_SECRET@huggingface.co/spaces/yadgire/demo-deployment main
